@@ -9,10 +9,11 @@
 package org.sosy_lab.cpachecker.cfa;
 
 import static com.google.common.truth.Truth.assertThat;
+import static com.google.common.truth.Truth8.assertThat;
 
 import com.google.common.collect.ImmutableList;
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.List;
 import org.junit.Before;
 import org.junit.Test;
@@ -66,7 +67,7 @@ public class CParserLocationTest {
     ParseResult result = parser.parseString(fileName, code);
     FileLocation mainLoc = result.getFunctions().get("main").getFileLocation();
 
-    assertThat(mainLoc.getFileName()).isEqualTo(expectedFileName);
+    assertThat(mainLoc.getFileName()).isEqualTo(Path.of(expectedFileName));
     assertThat(mainLoc.getNiceFileName()).isEmpty();
     assertThat(mainLoc.getStartingLineNumber()).isEqualTo(1);
     assertThat(mainLoc.getEndingLineNumber()).isEqualTo(1);
@@ -84,7 +85,7 @@ public class CParserLocationTest {
     ParseResult result = parser.parseString(fileName, code);
     FileLocation mainLoc = result.getFunctions().get("main").getFileLocation();
 
-    assertThat(mainLoc.getFileName()).isEqualTo(expectedFileName);
+    assertThat(mainLoc.getFileName()).isEqualTo(Path.of(expectedFileName));
     assertThat(mainLoc.getNiceFileName()).isEmpty();
     assertThat(mainLoc.getStartingLineNumber()).isEqualTo(2);
     assertThat(mainLoc.getEndingLineNumber()).isEqualTo(2);
@@ -102,7 +103,7 @@ public class CParserLocationTest {
     ParseResult result = parser.parseString(fileName, code);
     FileLocation mainLoc = result.getFunctions().get("main").getFileLocation();
 
-    assertThat(mainLoc.getFileName()).isEqualTo(expectedFileName);
+    assertThat(mainLoc.getFileName()).isEqualTo(Path.of(expectedFileName));
     assertThat(mainLoc.getNiceFileName()).isEmpty();
     assertThat(mainLoc.getStartingLineNumber()).isEqualTo(2);
     assertThat(mainLoc.getEndingLineNumber()).isEqualTo(2);
@@ -120,7 +121,7 @@ public class CParserLocationTest {
     ParseResult result = parser.parseString(fileName, code);
     FileLocation mainLoc = result.getFunctions().get("main").getFileLocation();
 
-    assertThat(mainLoc.getFileName()).isEqualTo("foo.c");
+    assertThat(mainLoc.getFileName()).isEqualTo(Path.of("foo.c"));
     assertThat(mainLoc.getNiceFileName()).isEqualTo("foo.c");
     assertThat(mainLoc.getStartingLineNumber()).isEqualTo(2);
     assertThat(mainLoc.getEndingLineNumber()).isEqualTo(2);
@@ -132,28 +133,29 @@ public class CParserLocationTest {
   @SuppressFBWarnings("NP_NULL_ON_SOME_PATH_FROM_RETURN_VALUE")
   public void multiFileTest() throws CParserException, InterruptedException {
     String mainCode = "void main() { }";
-    FileContentToParse main = new FileContentToParse(fileName, mainCode);
+    FileContentToParse main = new FileContentToParse(Path.of(fileName), mainCode);
 
     String additionalCode = "void foo() { }";
     String additionalFileName = fileName.replace("test", "additional");
     String expectedAdditionalFileName = expectedFileName.replace("test", "additional");
-    FileContentToParse additional = new FileContentToParse(additionalFileName, additionalCode);
+    FileContentToParse additional =
+        new FileContentToParse(Path.of(additionalFileName), additionalCode);
     ParseResult result =
         parser.parseString(ImmutableList.of(main, additional), new CSourceOriginMapping());
 
     FileLocation mainLoc = result.getFunctions().get("main").getFileLocation();
-    assertThat(mainLoc.getFileName()).isEqualTo(expectedFileName);
+    assertThat(mainLoc.getFileName()).isEqualTo(Path.of(expectedFileName));
     assertThat(mainLoc.getNiceFileName())
-        .isEqualTo(Paths.get(expectedFileName).getFileName().toString());
+        .isEqualTo(Path.of(expectedFileName).getFileName().toString());
     assertThat(mainLoc.getStartingLineNumber()).isEqualTo(1);
     assertThat(mainLoc.getEndingLineNumber()).isEqualTo(1);
     assertThat(mainLoc.getStartingLineInOrigin()).isEqualTo(1);
     assertThat(mainLoc.getEndingLineInOrigin()).isEqualTo(1);
 
     FileLocation additionalLoc = result.getFunctions().get("foo").getFileLocation();
-    assertThat(additionalLoc.getFileName()).isEqualTo(expectedAdditionalFileName);
+    assertThat(additionalLoc.getFileName()).isEqualTo(Path.of(expectedAdditionalFileName));
     assertThat(additionalLoc.getNiceFileName())
-        .isEqualTo(Paths.get(expectedAdditionalFileName).getFileName().toString());
+        .isEqualTo(Path.of(expectedAdditionalFileName).getFileName().toString());
     assertThat(additionalLoc.getStartingLineNumber()).isEqualTo(1);
     assertThat(additionalLoc.getEndingLineNumber()).isEqualTo(1);
     assertThat(additionalLoc.getStartingLineInOrigin()).isEqualTo(1);
